
2005-11-23  Florian Boor <florian.boor@kernelconcepts.de>

    * Release version 0.66.
    * familiar/control1: Update dependencies to up to date libgpevtype.

2005-11-22  Florian Boor <florian.boor@kernelconcepts.de>

    * configure.ac: Push version number...
    * month_view.c: Add some #ifdefs because sizing is a little bit different
                    in the Hildon environment.
    * export-vcal.c: Remove unused line breaking build.
    * day-view.c, day-render.c: Make gap selectable again to have a reminder 
                                area without gap. Some more minor changes.

2005-11-21  Florian Boor <florian.boor@kernelconcepts.de>

    * main.c: Add category editing button and menu item.
    * week_view.c, month_view.c, main.c: Several improvements and fixes in 
                                         display code. Improve hildon menu.

2005-11-10  Florian Boor <florian.boor@kernelconcepts.de>

    * day_view.c: Hide unavailable export buttons.
                  Hide popup before opening selector.
    * export-vcal.c: Make Hildon UI compatible.
	* event_ui.c: Use buttonbox for Hildon UI makes buttonl look much better.
	* day_view.c: Fix widget creation.
	* main.c: Fix missing toolbar.
    * dav_view.c: Clean up context popup, check if export mechanisms are 
                  available.
    * main.c: Proposed fix for visible, useless selectors.

2005-11-07  Florian Boor <florian.boor@kernelconcepts.de>

    * export-vcal.*: New files implementing event data export. Derived from
                     gpe-contacts.
    * configure.ac: Add parameter to switch DBus usage like in gpe-contacts.
    * main.c: Initialize export stuff.
    * day_view.c: Start to implement improved popup supporting data export.
    * event.h: Obviously unused -> removed.

2005-11-05  Florian Boor <florian.boor@kernelconcepts.de>

	* event-ui.c: Change some widget packing to clean up UI.
	              Move categories and text to new "detail" tab to free screen 